--- a/resources/assets/lyoko/lang/en_US.lang
+++ b/resources/assets/lyoko/lang/en_US.lang
@@ -5,5 +5,9 @@ language.region=US
 language.code=en_US
 tile.blockUraniumOre.name=Uranium Ore
 tile.blockSuperComputer.name=SuperComputer
+tile.blockCentrifuge.name=Centrifuge
 item.itemUraniumDust.name=Uranium Oxide
 item.itemHydroAcid.name=Hydroflouric Acid
+item.itemHydrogenCanister.name=Centrifuge Canister(Hydrogen)
+item.itemWaterCanister.name=Centrifuge Canister(Water)
+item.itemEmptyCanister.name=Centrifuge Canister(Empty)
